Fix: alignment issue with buttons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -121,7 +121,6 @@ footer{
   }
 .blog-btn{
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black !important;
-    margin: 2px;
 }
 .category-btn{
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black !important;
